fix: alter color of dark mode and utfpr icon

--- a/styles/main.css
+++ b/styles/main.css
@@ -143,20 +143,28 @@ dt {
 }
 
 body.dark-mode {
-  background: #2E2E2E;
-  color: #FFFFFF;
+  background: #121212;
+  color: #E0E0E0;
 }
 
 body.dark-mode header {
-  background-color: #7CB342;
+  background-color: #051c43;
 }
 
 body.dark-mode a {
-  color: #03DAC6;
+  color: #64B5F6;
 }
 
 body.dark-mode nav ul li {
-  color: #fff;
+  color: #E0E0E0;
+}
+
+body.dark-mode .university {
+  color: #536DFE;
+}
+
+body.dark-mode footer {
+  background-color: #051c43;
 }
 
 .skills-list {
@@ -196,7 +204,7 @@ body.dark-mode nav ul li {
 }
 
 body.dark-mode .university {
-  color: #B2FF59;
+  color: #536DFE;
 }
 
 footer {
@@ -214,7 +222,7 @@ footer p {
 }
 
 body.dark-mode footer {
-  background-color: #7CB342;
+  background-color: #051c43;
   /* Mesma cor do cabeçalho no modo escuro */
 }
 
