--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -42,6 +42,7 @@
 
   .padding-left {
     padding-left: 10%;
+    padding-right: 5%;
   }
 
   #professional-profile-text {
